Fixed an issue where content was overflowing modal window in manifest metadata popup

--- a/app/styles/components/_manifest-metadata-dialog.scss
+++ b/app/styles/components/_manifest-metadata-dialog.scss
@@ -1,10 +1,20 @@
 .manifest-metadata-dialog {
 
   .metadata-field-row {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 
     .metadata-field-label {
       font-weight: bold;
+      word-wrap: break-word;
+    }
+
+    .metadata-field-value {
+      white-space: normal; 
+      word-wrap: break-word;
     }  
+
+    .source-attribution-logo {
+      max-width: 100%;
+    }
   }
 }
